# cookiecutter-api

./: CONTRIBUTING.md  LICENSE  README.md  cookiecutter.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/setup-env/: action.yml  setup-env.yml
.github/workflows/: build-pipeline.yml
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_name}}-python/: .gitignore  Makefile  README.md  function_app.py  pyproject.toml  template.local.settings.json  {{cookiecutter._local_settings}}.json
{{cookiecutter.project_name}}-python/.thunderclient/: item_collection.json  localhost_env.json
{{cookiecutter.project_name}}-python/blueprints/: __init__.py  item_api.py  {{cookiecutter.project_slug}}_api.py
{{cookiecutter.project_name}}-python/controllers/: __init__.py  item_controller.py  {{cookiecutter.project_slug}}_controller.py  {{cookiecutter.project_slug}}_controller_test.py
{{cookiecutter.project_name}}-python/errors/: __init__.py  errors.py
{{cookiecutter.project_name}}-python/models/: __init__.py  item.py  {{cookiecutter.project_slug}}.py
{{cookiecutter.project_name}}-python/repositories/: __init__.py  item_repository.py  {{cookiecutter.project_slug}}_repository.py  {{cookiecutter.project_slug}}_repository_test.py
{{cookiecutter.project_name}}-python/services/: __init__.py  item_service.py  {{cookiecutter.project_slug}}_service.py  {{cookiecutter.project_slug}}_service_test.py
{{cookiecutter.project_name}}-python/utils/: __init__.py  detect_error.py  detect_error_test.py  response_generator.py  response_generator_test.py
